# energy-forecasting-task

./:  hydro-production-forecast-model.ipynb  Makefile  README.md  electricity-price-value.ipynb  price-scenarios.ipynb  pyproject.toml
